k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devices-app
  namespace: devices
  labels:
    app: devices-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingParams:
      updatePeriodSeconds: 10
      intervalSeconds: 20
      timeoutSeconds: 600
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: devices
  template:
    metadata:
      labels:
        app: devices
        cluster: devices-cluster
    spec:
      serviceAccountName: devices-app
      containers:
        - name: remote-control-device
          image: ghcr.io/george-haddad/remote-control-device:0.0.10-20260630160428.0.0-g664add0-28450372040
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 256Mi
              cpu: "2"
            requests:
              memory: 128Mi
              cpu: "1"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /readiness
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
