k8s/remote-control-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-control-api
  namespace: remote-control
  labels:
    app: remote-control-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingParams:
      updatePeriodSeconds: 10
      intervalSeconds: 20
      timeoutSeconds: 600
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: remote-control-api
  template:
    metadata:
      labels:
        app: remote-control-api
        cluster: remote-control-cluster
    spec:
      serviceAccountName: remote-control-api
      containers:
        - name: remote-control-api
          image: remote-control-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 256Mi
              cpu: "2"
            requests:
              memory: 128Mi
              cpu: "1"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /readiness
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
