k8s/remote-control-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remote-control-api
  namespace: remote-control
spec:
  selector:
    app: remote-control-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
