k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devices-app
  namespace: devices
spec:
  selector:
    app: devices
  ports:
    - name: http
      port: 8080
      targetPort: 8080
