k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: devices-route
  namespace: devices
spec:
  parentRefs:
    - name: devices-gateway
  hostnames:
    - "devices.localhost"
  rules:
    - backendRefs:
        - name: devices-app
          port: 80
          weight: 1
          group: ""
          kind: Service
      matches:
        - path:
            type: PathPrefix
            value: /
