k8s/remote-control-api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: remote-control-api
  namespace: remote-control
spec:
  parentRefs:
    - name: remote-control-gateway
  hostnames:
    - "remote-control.localhost"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: remote-control-api
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
